--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,9 +15,9 @@
         {%- assign _icon = _page.icon | default: 'fa-link' -%}
         {%- comment -%}<!-- page.url (no underscore) is the url of the current page-->{%- endcomment -%}
         {%- if _page.url == page.url -%}
-          <li><a href="#" id="{{- _slug -}}" class="active">
+          <!--<li><a href="#" id="{{- _slug -}}" class="active">
             <span class="icon {{ _icon }}">{{- _title -}}</span>
-          </a></li>
+          </a></li>-->
         {%- elsif _page.url -%}
           <li><a href="{{- _page.url | absolute_url -}}" id="{{- _slug -}}-link">
             <span class="icon {{ _icon }}">{{- _title -}}</span>
@@ -34,7 +34,7 @@
         {%- assign _title = _sect.title | default: _sect.layout | default: 'Untitled' -%}
         {%- assign _slug = _title | slugify -%}
         {%- assign _icon = _sect.icon | default: 'fa-file' -%}
-        <li><a href="#{{- _slug -}}" id="{{- _slug -}}-link" class="scrolly"><span class="icon {{ _icon }}">{{- _title -}}</span></a></li>
+        <li><a href="#{{- _slug -}}" id="{{- _slug -}}-link" class="scrolly"><span class="icon {{ _iscon }}">{{- _title -}}</span></a></li>
       {%- endfor -%}
     {%- endunless -%}
   </ul>
