--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,8 +32,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--[if lte IE 8]><script src="{{- 'assets/js/ie/html5shiv.js' | relative_url -}}" defer></script><![endif]-->
-  <link rel="stylesheet" href="{{- '/pdart/assets/css/mymain.css' | relative_url -}}" />
   <link rel="stylesheet" href="{{- 'assets/css/main.css' | relative_url -}}" />
+  <link rel="stylesheet" href="{{- 'assets/css/style.css' | relative_url -}}" />
   <!--[if lte IE 8]><link rel="stylesheet" href="{{- 'assets/css/ie8.css' | relative_url -}}" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="{{- 'assets/css/ie9.css' | relative_url -}}" /><![endif]-->
 
