--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -34,7 +34,7 @@
         {%- assign _title = _sect.title | default: _sect.layout | default: 'Untitled' -%}
         {%- assign _slug = _title | slugify -%}
         {%- assign _icon = _sect.icon | default: 'fa-file' -%}
-        <li><a href="#{{- _slug -}}" id="{{- _slug -}}-link" class="scrolly"><span class="icon {{ _iscon }}">{{- _title -}}</span></a></li>
+        <li><a href="#{{- _slug -}}" id="{{- _slug -}}-link" class="scrolly"><span class="icon {{ _icon-prishe }}">{{- _title -}}</span></a></li>
       {%- endfor -%}
     {%- endunless -%}
   </ul>
